fix: input overflow on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  input {
+    @apply w-full;
+  }
 }
 
 html {
